apps/base/it-tools/it-tools-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app: it-tools  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
        app.kubernetes.io/name: it-tools
    spec:
      containers:
      - name: it-tools
        image: corentinth/it-tools:latest
        ports:
        - containerPort: 80
