apps/base/it-tools/it-tools-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
