apps/base/it-tools/it-tools-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  annotations:
    gethomepage.dev/href: "https://${HOSTNAME:=it-tools.hephaestus.markmk.com}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IT - Tools"
    gethomepage.dev/description: "Collection of handy online tools for developers"
    gethomepage.dev/app: it-tools
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://github.com/CorentinTh/it-tools/blob/main/public/android-chrome-192x192.png?raw=true"  
    traefik.http.routers.it-tools.middlewares: tinyauth@kubernetescrd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${HOSTNAME:=it-tools.hephaestus.markmk.com}`) 
      kind: Rule
      services:
        - name: it-tools
          port: 80
          namespace: it-tools
